# translate_cli

./: .env_example  .gitignore  AGENTS.md  README.md  conftest.py  pyproject.toml  transfold.config.yaml
tests/: test_chunking.py  test_cli_stream.py  test_config.py  test_openrouter_client.py  test_translator.py
transfold/: __init__.py  cache.py  chunking.py  cli.py  config.py  files.py  progress.py  translator.py
translate_cli/: __init__.py  __main__.py  cli.py  config.py  openrouter.py
web/backend/: __init__.py  __main__.py  app.py  cache.py  history.py  jobs.py  models.py  schemas.py  settings.py
web/frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
web/frontend/src/: App.tsx  styles.css
web/frontend/src/api/: client.ts
web/frontend/src/pages/: HistoryPage.tsx  JobDetailPage.tsx  PreviewPage.tsx  SubmitJobPage.tsx
